--- a/style.css
+++ b/style.css
@@ -115,3 +115,15 @@ p {
   font-weight: normal;
   font-style: normal;
 }
+blockquote.q {
+color: #D4AF37;
+border-left: 4px solid #8B0000;
+font-style: italic;
+}
+@font-face {
+font-family: “Pudelinka”;
+src: url(”Fonts/pudelinka.ttf” ) format('truetype’);
+font-weight: normal;
+font-style: normal;
+}
+p.zz{front-family: "Pudelinka";}
